--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,520 +1,230 @@
+/* Style Variables */
 :root {
-    --primary: #ccdad1;
-    --secondary: #9caea9;
-    --tertiary: #788585;
-    --light-dark: #6f6866;
-    --dark: #38302e;
-    --border-radius: 0.3rem;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-color: var(--primary);
-    margin: 0;
-    padding: 0;
-    font-family: "IBM Plex Sans", sans-serif;
-    color: var(--dark);
-    line-height: 1.5;
-    font-size: 16px;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight: 700;
-    margin: 0;
-    color: var(--dark);
-    line-height: 1.25;
-  }
-  
-  h2 a:visited {
-    color: var(--tertiary);
-  }
-  
-  h2 a {
-    color: var(--primary);
-  }
-  
-  header {
-    margin-top: 50px;
-  }
-  
-  main {
-    margin: 20px auto;
-    width: 94%;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  p {
-    font-size: 1.2rem;
-  }
-  
-  input {
-      width: 100%;
-      border: 1px solid #ccc;
-      background: #FFF;
-      margin: 0 0 5px;
-      padding: 10px;
-  }
-  
-  .card-header h2 {
-    color: var(--primary);
-  }
-  
-  .btn {
-    font-size: 1.3rem;
-    text-decoration: none;
-    padding: 6px 5px;
-    width: 100%;
-    display: block;
-    margin: 5px 0;
-    border-radius: var(--border-radius);
-    color: var(--primary);
-    border: none;
-    outline: none;
-    background-color: var(--light-dark);
-    box-shadow: 3px 3px var(--dark);
-    transform: translate(-1px, -1px);
-  }
-  
-  .btn:hover {
-    color: var(--primary);
-    background-color: var(--tertiary);
-    transform: translate(0, 0);
-    box-shadow: 2px 2px var(--dark);
-  }
-  
-  .btn-inline {
-    display: inline;
-  }
-  
-  .li-inline {
-    display: inline;
-  }
-  
-  .navbar {
-    width: 100%;
-    position: fixed;
-    background-color: var(--dark);
-  }
-  
-  .nav-item {
-    margin: 0 40px;
-  }
-  
-  .nav-item a {
-    color: var(--primary);
-  }
-  
-  .hero {
-    padding: 3% 4%;
-    background-color: var(--dark);
-    color: var(--primary);
-  }
-  
-  .hero p {
-    max-width: 75%;
-  }
-  
-  .app-title {
-    font-size: 3rem;
-    background-color: var(--primary);
-    color: var(--dark);
-    padding: 0 10px;
-    display: inline-block;
-    border-radius: var(--border-radius);
-    box-shadow: 6px 5px var(--light-dark);
-  }
-  
-  .app-title a {
-    color: var(--dark);
-  }
-  
-  .list-group {
-    padding: 1%;
-  }
-  
-  .list-item {
-    margin-bottom: 10px;
-    padding: 1.5%;
-    border-radius: var(--border-radius);
-    background-color: var(--light-dark);
-    color: var(--primary);
-    text-decoration: none;
-  }
-  
-  .list-item:hover {
-    background-color: var(--dark);
-  }
-  
-  .footer a {
-    display: inline-block;
-    padding: 1em;
-    margin-bottom: .5em;
-    background-color: var(--dark);
-    color: var(--primary);
-    border-radius: var(--border-radius);
-    text-decoration: none;
-  }
-  
-  /* CARDS */
-  .card {
-    margin: 0 0 20px 0;
-    border: 3px solid var(--dark);
-    border-radius: var(--border-radius);
-  }
-  
-  .card-header {
-    color: var(--primary);
-    background-color: var(--dark);
-    padding: 1%;
-    border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
-  }
-  
-  .card-body {
-    padding: 1%;
-  }
-  
-  /* FORM */
-  .form-label,
-  .form-input,
-  .form-textarea {
-    display: block;
-  }
-  
-  .form-label {
-    font-size: 1.1rem;
-    margin: 0 0 0 5px;
-  }
-  
-  .form-input {
-    width: 100%;
-    padding: 1%;
-    margin: 5px 0;
-    font-size: 1.2rem;
-    border: 2px solid var(--light-dark);
-    border-radius: var(--border-radius);
-  }
-  
-  /* HEIGHT / WIDTH UTILS */
-  .min-100-vh {
-    min-height: 100vh;
-  }
-  
-  .min-100-vw {
-    min-width: 100vw;
-  }
-  
-  /* FONT UTILS */
-  .text-uppercase {
-    text-transform: uppercase;
-  }
-  
-  /* FLEX CONTENT */
-  .flex-row {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .flex-column {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  
-  .justify-space-between {
-    justify-content: space-between;
-  }
-  
-  .justify-space-around {
-    justify-content: space-around;
-  }
-  
-  .justify-flex-start {
-    justify-content: flex-start;
-  }
-  
-  .justify-flex-end {
-    justify-content: flex-end;
-  }
-  
-  .justify-center {
-    justify-content: center;
-  }
-  
-  .align-stretch {
-    align-items: stretch;
-  }
-  
-  .align-end {
-    align-items: flex-end;
-  }
-  
-  .align-center {
-    align-items: center;
-  }
-  
-  .col-auto {
-    flex-grow: 1;
-  }
-  
-  .col-1 {
-    flex: 0 0 calc(100% * 1 / 12 - 2%);
-  }
-  
-  .col-2 {
-    flex: 0 0 calc(100% * 2 / 12 - 2%);
-  }
-  
-  .col-3 {
-    flex: 0 0 calc(100% * 3 / 12 - 2%);
-  }
-  
-  .col-4 {
-    flex: 0 0 calc(100% * 4 / 12 - 2%);
-  }
-  
-  .col-5 {
-    flex: 0 0 calc(100% * 5 / 12 - 2%);
-  }
-  
-  .col-6 {
-    flex: 0 0 calc(100% * 6 / 12 - 2%);
-  }
-  
-  .col-7 {
-    flex: 0 0 calc(100% * 7 / 12 - 2%);
-  }
-  
-  .col-8 {
-    flex: 0 0 calc(100% * 8 / 12 - 2%);
-  }
-  
-  .col-9 {
-    flex: 0 0 calc(100% * 9 / 12 - 2%);
-  }
-  
-  .col-10 {
-    flex: 0 0 calc(100% * 10 / 12 - 2%);
-  }
-  
-  .col-11 {
-    flex: 0 0 calc(100% * 11 / 12 - 2%);
-  }
-  
-  .col-12 {
-    flex: 0 0 100%;
-  }
-  
-  /* col-sm */
-  @media screen and (min-width: 640px) {
-    .col-sm-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-    }
-  
-    .col-sm-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-    }
-  
-    .col-sm-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-    }
-  
-    .col-sm-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-    }
-  
-    .col-sm-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-    }
-  
-    .col-sm-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-    }
-  
-    .col-sm-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-    }
-  
-    .col-sm-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-    }
-  
-    .col-sm-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-    }
-  
-    .col-sm-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-    }
-  
-    .col-sm-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-    }
-  
-    .col-sm-12 {
-      flex: 0 0 100%;
-    }
-  }
-  
-  /* col-md */
-  @media screen and (min-width: 768px) {
-    .col-md-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-    }
-  
-    .col-md-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-    }
-  
-    .col-md-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-    }
-  
-    .col-md-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-    }
-  
-    .col-md-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-    }
-  
-    .col-md-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-    }
-  
-    .col-md-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-    }
-  
-    .col-md-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-    }
-  
-    .col-md-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-    }
-  
-    .col-md-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-    }
-  
-    .col-md-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-    }
-  
-    .col-md-12 {
-      flex: 0 0 100%;
-    }
-  }
-  
-  /* col-lg */
-  @media screen and (min-width: 992px) {
-    .col-lg-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-    }
-  
-    .col-lg-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-    }
-  
-    .col-lg-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-    }
-  
-    .col-lg-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-    }
-  
-    .col-lg-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-    }
-  
-    .col-lg-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-    }
-  
-    .col-lg-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-    }
-  
-    .col-lg-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-    }
-  
-    .col-lg-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-    }
-  
-    .col-lg-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-    }
-  
-    .col-lg-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-    }
-  
-    .col-lg-12 {
-      flex: 0 0 100%;
-    }
-  }
-  
-  /* col-xl */
-  @media screen and (min-width: 1200px) {
-    .col-xl-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-    }
-  
-    .col-xl-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-    }
-  
-    .col-xl-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-    }
-  
-    .col-xl-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-    }
-  
-    .col-xl-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-    }
-  
-    .col-xl-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-    }
-  
-    .col-xl-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-    }
-  
-    .col-xl-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-    }
-  
-    .col-xl-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-    }
-  
-    .col-xl-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-    }
-  
-    .col-xl-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-    }
-  
-    .col-xl-12 {
-      flex: 0 0 100%;
-    }
-  }
+  /* theme from https://www.color-hex.com/color-palette/98179 dark theme */
+  --white: #fff;
+  --blue-gray: #5885AF;
+  --blue: #007acc;
+  --gray-1: #c0c0c0;
+  --light-gray: #D3D3D3;
+  --gray-2: #3e3e42;
+  --gray-3: #2d2d30;
+  --black-1: #252526;
+  --black-2: #1e1e1e;
+  --border-radius: 0.3rem;
+  --box-shadow: 0 1px 4px 0px rgb(0 0 0 / 20%);
+}
+
+/* Font established for rem units */
+html {
+  font-size: 16px;
+}
+
+p {
+  font-size: 1.2rem;
+}
+
+/* Styles to the title */
+.hero {
+  padding: 3% 4%;
+  background-image: linear-gradient(to right, var(--gray-2), var(--gray-3));
+  color: var(--gray-2);
+}
+
+.app-title {
+  font-size: 3rem;
+  font-weight: 700;
+  background-color: var(--gray-1);
+  color: var(--dark);
+  padding: 0px 10px 5px 10px;
+  display: inline-block;
+  border-radius: var(--border-radius);
+  box-shadow: 6px 5px var(--black-1);
+}
+
+/* new styles */
+.nav-bar {
+  font-size: 1.5rem;
+  padding-bottom: 20px;
+}
+
+.nav-bar a {
+  text-decoration: none;
+  color: var(--gray-1);
+  font-weight: 500;
+  margin-right: 20px;
+}
+
+.no-button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: var(--gray-1);
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.no-button:hover {
+  color: var(--light-gray);
+}
+
+.post{
+  margin: 20px 0;
+  border: 10px var(--black-1);
+  text-align: right;
+}
+
+.post-title{
+  background-color: var(--gray-2);
+  padding: 15px;
+  margin-top: 0;
+  text-align: left;
+  color: var(--gray-1);
+}
+
+.post-title a:link{
+  color: var(--gray-1);
+  text-decoration: none;
+}
+
+.post-title a:visited{
+  color: var(--gray-1);
+  text-decoration: none;
+}
+
+.post-title a:hover{
+  text-decoration: none;
+  color: var(--white);
+}
+
+.post-body {
+  background-color: var(--gray-1);
+}
+
+.post-content {
+  padding: 10px !important;
+  text-align: left !important;
+}
+
+.post-author {
+  text-align: right;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  font-style: italic;
+}
+
+.post-button {
+  text-align: right;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+.post-username {
+  font-weight: bold;
+}
+
+.dashboard-container {
+  display: block;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.footer-margin {
+  margin-top: 50px;
+}
+
+.form-row {
+  margin-bottom: 20px;
+}
+
+.signup {
+  margin-top: 20px;
+}
+
+.signup-form div {
+  margin-bottom: 20px;
+}
+
+.login-form div {
+  margin-bottom: 20px;
+}
+
+.edit-post-form {
+  margin-top: 20px;
+}
+
+.edit-post-form div {
+  margin-bottom: 20px;
+}
+
+.register {
+  display: inline-block;
+  margin-top: 20px;
+}
+
+.single-post-container {
+  margin-top: 20px;
+}
+
+.comment-container {
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.comment-button {
+  margin-top: 20px;
+}
+
+.comment-text {
+  text-align: start;
+  padding: 10px;
+}
+
+.comment-author {
+  padding: 10px;
+  font-weight: bold;
+}
+
+#signup button {
+  display: inline-block;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+.dashboard-post {
+  border: 1px var(--black-1);
+}
+
+.dashboard button {
+  background: var(--blue-gray);
+}
+
+.dashboard button:hover {
+  background-color: var(--blue);
+}
+
+.new-post-button{
+  margin: 20px 0;
+}
+
+.new-post-button a:link {
+  text-decoration: none;
+  font-size: 20px;
+  color: var(--gray-1);
+}
+.new-post-button a:visited {
+  color: var(--gray-1);
+}
+.new-post-button a:hover {
+  color: var(--light-gray);
+}
+
+footer{
+  margin-top: 60px;
+  font-size: 1.4em;
+  text-align: center;
+}
+
+footer p a {
+  text-decoration: none;
+}
