--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,21 +1,22 @@
 <div class="card">
-  <div class="card-header">
-    <h2>Sign Up</h2>
-  </div>
-  <div id="signup" role="tabpanel">
+  <h2 class="title pb-4 post-title">Sign Up</h2>
     <form id="signup-form" class="card-body">
-      <div>
-        <label for="username-input-signup">Username</label>
-        <input type="text" id="username-input-signup" />
+      <div class="form-row">
+        <label for="username-signup" class="form-label">Username</label>
+        <input id="username-signup" type="text" class="form-input form-control" />
       </div>
-      <div>
-        <label for="password-input-signup">Password</label>
-        <input type="password" id="password-input-signup" />
+      <div class="form-row">
+        <label class="form-label" for="email-signup">Email</label>
+        <input  id="email-signup" type="email" class="form-input form-control" />
       </div>
-      <button type="submit" id="signup-btn" class="btn" >Signup!</button>
-      <a href="/login">Login instead</a>
+      <div class="form-row">
+        <label class="form-label" for="password-signup">Password</label>
+        <input  id="password-signup" type="password" class="form-input form-control" />
+      </div>
+      <button type="submit" class="btn" style="background: var(--blue-gray); color: var(--light-gray);">Sign Up</button>
+      <a class="btn login-link" href="/login" style="background: var(--blue-gray); color: var(--light-gray);">Log In</a>
     </form>
-  </div>
 </div>
+  
 
-<script src="/javascript/signup.js"></script>
+<script src="/js/signup.js"></script>
