--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,16 +1,17 @@
-<div class="post card">
-  <div class="card-header">
-    <h2>Create New Post</h2>
-  </div>
-  <form id="new-post-form" class="card-body">
-    <label class="form-label" for="post-title">Title</label>
-    <input type="text" name="post-title" class="form-input" />
-
-    <label class="form-label" for="post-body">Content</label>
-    <textarea name="post-body" class="form-input"></textarea>
-
-    <button type="submit" class="btn">Create</button>
-  </form>
+<div class="card">
+    <h2 class="title pb-4 post-title">Create New Post</h2>
+    <form class="card-body new-post-form" id="new-post-form">
+        <div class="form-row">
+            <label for="post-title" class="form-label" style="font-size: 1.75rem;">Title</label>
+            <input type="text" id="post-title" name="post-title" class="form-input form-control" />
+        </div>
+        <div class="form-row">
+            <label class="form-label" for="content" style="font-size: 1.75rem;">Content</label>
+            <input id="content" name="content" class="form-input form-control" />
+        </div>  
+        <button type="submit" class="btn" style="background: var(--blue-gray); color: var(--light-gray);">Create</button>
+    </form>
 </div>
 
-<script src="/javascript/new.js"></script>
+
+<script src="/js/add-post.js"></script>
