--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,52 +1,23 @@
-<div class="post">
-  <article class="card">
-    <div class="card-header flex-row justify-space-between">
-      <h2>{{post.title}}</h2>
-      <div>
-        Posted by {{post.User.username}} on {{format_date post.createdAt}}
-      </div>
+<section class="single-post-container">
+{{> post-info post}}
+
+{{> comments post.comments}}
+
+{{#if logged_in}}
+<div class="comment-container card">
+    {{!-- <h3 class="card-header"></h3> --}}
+    <form class="card-body comment-form" id="comment-form">
+    <div class="form-row">
+        <label class="form-label">Comment</label>
+        <input id="comment" name="comment-body" class="form-input form-control" />
     </div>
-    <div class="card-body">
-      {{post.body}}
-    </div>
-  </article>
-
-  {{#if post.Comments}}
-    <section class="card">
-      <div class="card-header">
-        <h3>Comments</h3>
-      </div>
-
-      <div class="card-body">
-        {{#each post.Comments}}
-          <div>
-            <p>
-              {{body}}
-            </p>
-            <p>
-              &mdash; {{User.username}}, {{format_date createdAt}}
-            </p>
-          </div>
-        {{/each}}
-      </div>
-    </section>
-  {{/if}}
-
-  <form id="new-comment-form" class="card">
-    <div class="card-header">
-      <h3>Add New Comment</h3>
-    </div>
-
-    <div class="card-body">
-      <input type="hidden" name="post-id" value="{{post.id}}" />
-
-      <label class="form-label" for="comment-body">Comment</label>
-
-      <textarea name="comment-body" class="form-input"></textarea>
-
-      <button type="submit" class="btn">Submit</button>
-    </div>
-  </form>
+        <button type="submit" class="btn" style="background: var(--blue-gray); color: var(--light-gray);">Submit</button>
+    </form>
 </div>
+{{/if}}
 
-<script src="/javascript/comment.js"></script>
+</section>
+
+{{#if logged_in}}
+<script src="/js/comment.js"></script>
+{{/if}}
