fixed .env file and edited main.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,7 +52,7 @@
     <footer class="footer">
       <div class="row">
           <p>
-            Tech Blog by <a href="https://github.com/ajsherrill2" target="_blank"> Adam Sherrill</a>
+            Tech Blog by <a href="https://github.com/ajsherrill2" target="_blank">Brandon Jimenez</a>
           </p>
       </div>
     </footer>
